# acorns

./: CHANGELOG.md  Cargo.toml  PACKAGING.md  acorns.spec
.github/workflows/: pages.yml
docs/: assembly_troubleshooting.adoc  main.adoc
docs/modules/: proc_chapter-missing-in-build.adoc  proc_ticket-missing-in-subsection.adoc
src/: extra_fields.rs  lib.rs  note.rs  references.rs  status_report.rs  summary_list.rs  templating.rs  tracker_access.rs
templates/: summary-list.adoc
